--- a/Main/index.html
+++ b/Main/index.html
@@ -8,9 +8,10 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../TESTSITE/css/bootstrap.css" rel="stylesheet">
-    <link href="../TESTSITE/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="SHORTCUT ICON" href="http://ashevillenc.gov/Portals/0/favicon.ico" />
+    <link href="../Main/css/bootstrap.css" rel="stylesheet">
+    <link href="../Main/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="SHORTCUT ICON" href="http://ashevillenc.gov/Portals/0/favicon.ico" />
+
     <style>
 
     /* GLOBAL STYLES
@@ -260,11 +261,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../TESTSITE/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../TESTSITE/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../TESTSITE/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../TESTSITE/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../TESTSITE/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../Main/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../Main/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../Main/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../Main/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../Main/ico/favicon.png">
   </head>
 
   <body>
@@ -489,19 +490,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../TESTSITE/js/jquery.js"></script>
-    <script src="../TESTSITE/js/bootstrap-transition.js"></script>
-    <script src="../TESTSITE/js/bootstrap-alert.js"></script>
-    <script src="../TESTSITE/js/bootstrap-modal.js"></script>
-    <script src="../TESTSITE/js/bootstrap-dropdown.js"></script>
-    <script src="../TESTSITE/js/bootstrap-scrollspy.js"></script>
-    <script src="../TESTSITE/js/bootstrap-tab.js"></script>
-    <script src="../TESTSITE/js/bootstrap-tooltip.js"></script>
-    <script src="../TESTSITE/js/bootstrap-popover.js"></script>
-    <script src="../TESTSITE/js/bootstrap-button.js"></script>
-    <script src="../TESTSITE/js/bootstrap-collapse.js"></script>
-    <script src="../TESTSITE/js/bootstrap-carousel.js"></script>
-    <script src="../TESTSITE/js/bootstrap-typeahead.js"></script>
+    <script src="../Main/js/jquery.js"></script>
+    <script src="../Main/js/bootstrap-transition.js"></script>
+    <script src="../Main/js/bootstrap-alert.js"></script>
+    <script src="../Main/js/bootstrap-modal.js"></script>
+    <script src="../Main/js/bootstrap-dropdown.js"></script>
+    <script src="../Main/js/bootstrap-scrollspy.js"></script>
+    <script src="../Main/js/bootstrap-tab.js"></script>
+    <script src="../Main/js/bootstrap-tooltip.js"></script>
+    <script src="../Main/js/bootstrap-popover.js"></script>
+    <script src="../Main/js/bootstrap-button.js"></script>
+    <script src="../Main/js/bootstrap-collapse.js"></script>
+    <script src="../Main/js/bootstrap-carousel.js"></script>
+    <script src="../Main/js/bootstrap-typeahead.js"></script>
     <script>
       !function ($) {
         $(function(){
@@ -509,6 +510,6 @@
         })
       }(window.jQuery)
     </script>
-   <script src="../TESTSITE/js/holder.js"></script>
+   <script src="../Main/js/holder.js"></script>
   </body>
 </html>
