--- a/Main/map.html
+++ b/Main/map.html
@@ -8,20 +8,22 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../new/TESTSITE/css/bootstrap.css" rel="stylesheet">
-    <link href="../new/TESTSITE/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="SHORTCUT ICON" href="http://ashevillenc.gov/Portals/0/favicon.ico" />    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    <link href="../Main/css/bootstrap.css" rel="stylesheet">
+    <link href="../Main/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="SHORTCUT ICON" href="http://ashevillenc.gov/Portals/0/favicon.ico" />
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" /> 
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" /> 
+
     
     <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
     <link rel="stylesheet" href="../new/Leaflet.markercluster-master/dist/MarkerCluster.css" />
 	<link rel="stylesheet" href="../new/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="../dist/MarkerCluster.Default.ie.css" /><![endif]-->
 	<!--<script src="../new/leafletajax/dist/leaflet.ajax.js"></script>-->
-	<script src="../new/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
-	<script src="../new/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
-	<script src="../new/gravedata.js"></script>
+	<script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
+	<script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
+	<script src="../Main/data/gravedata.js"></script>
 
     <style>
 
@@ -283,11 +285,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../TESTSITE/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../TESTSITE/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../TESTSITE/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../TESTSITE/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../TESTSITE/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../Main/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../Main/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../Main/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../Main/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../Main/ico/favicon.png">
   </head>
 
   <body>
@@ -355,19 +357,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../new/TESTSITE/js/jquery.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-transition.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-alert.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-modal.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-dropdown.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-scrollspy.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-tab.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-tooltip.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-popover.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-button.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-collapse.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-carousel.js"></script>
-    <script src="../new/TESTSITE/js/bootstrap-typeahead.js"></script>
+    <script src="../Main/js/jquery.js"></script>
+    <script src="../Main/js/bootstrap-transition.js"></script>
+    <script src="../Main/js/bootstrap-alert.js"></script>
+    <script src="../Main/js/bootstrap-modal.js"></script>
+    <script src="../Main/js/bootstrap-dropdown.js"></script>
+    <script src="../Main/js/bootstrap-scrollspy.js"></script>
+    <script src="../Main/js/bootstrap-tab.js"></script>
+    <script src="../Main/js/bootstrap-tooltip.js"></script>
+    <script src="../Main/js/bootstrap-popover.js"></script>
+    <script src="../Main/js/bootstrap-button.js"></script>
+    <script src="../Main/js/bootstrap-collapse.js"></script>
+    <script src="../Main/js/bootstrap-carousel.js"></script>
+    <script src="../Main/js/bootstrap-typeahead.js"></script>
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>	
     <script type="text/javascript">
@@ -538,6 +540,6 @@ map.on('locationerror', onLocationError);
    
 
    </script>
-   <script src="../new/TESTSITE/js/holder.js"></script>
+   <script src="../Main/js/holder.js"></script>
   </body>
 </html>
