--- a/Main/index.html
+++ b/Main/index.html
@@ -330,7 +330,7 @@
             <div class="carousel-caption">
               <h1>Explore Riverside Cemetery</h1>
               <p class="lead">Search our Interment database</p>
-              <a class="btn btn-large btn-primary" href="http://gis.ashevillenc.gov/riverside/new/map.html">Search the Map!</a>
+              <a class="btn btn-large btn-primary" href="cityofasheville.github.io/riversidecemetery/Main/map.html">Search the Map!</a>
             </div>
           </div>
         </div>
@@ -370,10 +370,10 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-         <a href="http://gis.ashevillenc.gov/riverside/new/map.html"><img class="img-circle" src="../img/BM1132.jpg"></a>
+         <a href="cityofasheville.github.io/riversidecemetery/Main/map.html"><img class="img-circle" src="../img/BM1132.jpg"></a>
           <h2>Search the Map</h2>
           <p>Curioius about who is buried at Riverside Cemetery, or are looking for a loved one, find them on our <em>new</em> interactive map!</p>
-          <p><a class="btn" href="http://gis.ashevillenc.gov/riverside/new/map.html">View the Map &raquo;</a></p>
+          <p><a class="btn" href="cityofasheville.github.io/riversidecemetery/Main/map.html">View the Map &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <a href="http://gis.ashevillenc.gov/mapasheville/historictour/"><img class="img-circle" src="http://farm8.static.flickr.com/7269/7563525608_b3928c48b2_b.jpg"></a>   
