--- a/Main/map.html
+++ b/Main/map.html
@@ -8,8 +8,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../Main/css/bootstrap.css" rel="stylesheet">
-    <link href="../Main/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="SHORTCUT ICON" href="http://ashevillenc.gov/Portals/0/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
@@ -17,13 +17,13 @@
 
     
     <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
-    <link rel="stylesheet" href="../new/Leaflet.markercluster-master/dist/MarkerCluster.css" />
-	<link rel="stylesheet" href="../new/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="../js/Leaflet.markercluster-master/dist/MarkerCluster.css" />
+	<link rel="stylesheet" href="../js/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="../dist/MarkerCluster.Default.ie.css" /><![endif]-->
 	<!--<script src="../new/leafletajax/dist/leaflet.ajax.js"></script>-->
-	<script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
-	<script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
-	<script src="../Main/data/gravedata.js"></script>
+	<script src="../js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
+	<script src="../js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
+	<script src="../data/gravedata.js"></script>
 
     <style>
 
@@ -310,15 +310,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="http://gis.ashevillenc.gov/Riverside/new/testsite/index.html#">Riverside Cemetery</a>
+            <a class="brand" href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#">Riverside Cemetery</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="http://gis.ashevillenc.gov/Riverside/new/testsite/index.html#">Home</a></li>
-                <li><a href="http://gis.ashevillenc.gov/Riverside/new/testsite/index.html#about">About</a></li>
-                <li><a href="http://gis.ashevillenc.gov/Riverside/new/testsite/index.html#fees">Fees</a></li>
-                <li><a href="http://gis.ashevillenc.gov/Riverside/new/testsite/index.html#contact">Contact</a></li>
-                <li><a href="#feedback">Feedback</a></li>
+                <li class="active"><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#">Home</a></li>
+                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.htmll#about">About</a></li>
+                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#fees">Fees</a></li>
+                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#contact">Contact</a></li>
+                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#feedback">Feedback</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Info <b class="caret"></b></a>
@@ -357,19 +357,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../Main/js/jquery.js"></script>
-    <script src="../Main/js/bootstrap-transition.js"></script>
-    <script src="../Main/js/bootstrap-alert.js"></script>
-    <script src="../Main/js/bootstrap-modal.js"></script>
-    <script src="../Main/js/bootstrap-dropdown.js"></script>
-    <script src="../Main/js/bootstrap-scrollspy.js"></script>
-    <script src="../Main/js/bootstrap-tab.js"></script>
-    <script src="../Main/js/bootstrap-tooltip.js"></script>
-    <script src="../Main/js/bootstrap-popover.js"></script>
-    <script src="../Main/js/bootstrap-button.js"></script>
-    <script src="../Main/js/bootstrap-collapse.js"></script>
-    <script src="../Main/js/bootstrap-carousel.js"></script>
-    <script src="../Main/js/bootstrap-typeahead.js"></script>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/bootstrap-transition.js"></script>
+    <script src="../js/bootstrap-alert.js"></script>
+    <script src="../js/bootstrap-modal.js"></script>
+    <script src="../js/bootstrap-dropdown.js"></script>
+    <script src="../js/bootstrap-scrollspy.js"></script>
+    <script src="../js/bootstrap-tab.js"></script>
+    <script src="../js/bootstrap-tooltip.js"></script>
+    <script src="../js/bootstrap-popover.js"></script>
+    <script src="../js/bootstrap-button.js"></script>
+    <script src="../js/bootstrap-collapse.js"></script>
+    <script src="../js/bootstrap-carousel.js"></script>
+    <script src="../js/bootstrap-typeahead.js"></script>
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script>	
     <script type="text/javascript">
@@ -540,6 +540,6 @@ map.on('locationerror', onLocationError);
    
 
    </script>
-   <script src="../Main/js/holder.js"></script>
+   <script src="../js/holder.js"></script>
   </body>
 </html>
