--- a/Main/index.html
+++ b/Main/index.html
@@ -261,11 +261,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../Main/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../Main/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../Main/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../Main/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../Main/ico/favicon.png">
   </head>
 
   <body>
@@ -370,7 +370,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-         <a href="cityofasheville.github.io/riversidecemetery/Main/map.html"><img class="img-circle" src="../img/BM1132.jpg"></a>
+         <a href="cityofasheville.github.io/riversidecemetery/Main/map.html"><img class="img-circle" src="../Main/img/BM1132.jpg"></a>
           <h2>Search the Map</h2>
           <p>Curioius about who is buried at Riverside Cemetery, or are looking for a loved one, find them on our <em>new</em> interactive map!</p>
           <p><a class="btn" href="cityofasheville.github.io/riversidecemetery/Main/map.html">View the Map &raquo;</a></p>
@@ -490,19 +490,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../js/jquery.js"></script>
-    <script src="../js/bootstrap-transition.js"></script>
-    <script src="../js/bootstrap-alert.js"></script>
-    <script src="../js/bootstrap-modal.js"></script>
-    <script src="../js/bootstrap-dropdown.js"></script>
-    <script src="../js/bootstrap-scrollspy.js"></script>
-    <script src="../js/bootstrap-tab.js"></script>
-    <script src="../js/bootstrap-tooltip.js"></script>
-    <script src="../js/bootstrap-popover.js"></script>
-    <script src="../js/bootstrap-button.js"></script>
-    <script src="../js/bootstrap-collapse.js"></script>
-    <script src="../js/bootstrap-carousel.js"></script>
-    <script src="../js/bootstrap-typeahead.js"></script>
+    <script src="../Main/js/jquery.js"></script>
+    <script src="../Main/js/bootstrap-transition.js"></script>
+    <script src="../Main/js/bootstrap-alert.js"></script>
+    <script src="../Main/js/bootstrap-modal.js"></script>
+    <script src="../Main/js/bootstrap-dropdown.js"></script>
+    <script src="../Main/js/bootstrap-scrollspy.js"></script>
+    <script src="../Main/js/bootstrap-tab.js"></script>
+    <script src="../Main/js/bootstrap-tooltip.js"></script>
+    <script src="../Main/js/bootstrap-popover.js"></script>
+    <script src="../Main/js/bootstrap-button.js"></script>
+    <script src="../Main/js/bootstrap-collapse.js"></script>
+    <script src="../Main/js/bootstrap-carousel.js"></script>
+    <script src="../Main/js/bootstrap-typeahead.js"></script>
     <script>
       !function ($) {
         $(function(){
