--- a/Main/index.html
+++ b/Main/index.html
@@ -370,7 +370,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="span4">
-         <a href="cityofasheville.github.io/riversidecemetery/Main/map.html"><img class="img-circle" src="../Main/img/BM1132.jpg"></a>
+         <a href="cityofasheville.github.io/riversidecemetery/Main/map.html"><img class="img-circle" src="../Main/img/BM1132.JPG"></a>
           <h2>Search the Map</h2>
           <p>Curioius about who is buried at Riverside Cemetery, or are looking for a loved one, find them on our <em>new</em> interactive map!</p>
           <p><a class="btn" href="cityofasheville.github.io/riversidecemetery/Main/map.html">View the Map &raquo;</a></p>
