--- a/Main/map.html
+++ b/Main/map.html
@@ -11,14 +11,14 @@
     <link href="../Main/css/bootstrap.css" rel="stylesheet">
     <link href="../Main/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="SHORTCUT ICON" href="http://ashevillenc.gov/Portals/0/favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+    <link type="text/css" rel="stylesheet" href="../Main/css/stylesheet.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" /> 
 
     
     <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
-    <link rel="stylesheet" href="../js/Leaflet.markercluster-master/dist/MarkerCluster.css" />
-	<link rel="stylesheet" href="../js/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="../Main/js/Leaflet.markercluster-master/dist/MarkerCluster.css" />
+	<link rel="stylesheet" href="../Main/js/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="../dist/MarkerCluster.Default.ie.css" /><![endif]-->
 	<!--<script src="../new/leafletajax/dist/leaflet.ajax.js"></script>-->
 	<script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
@@ -540,6 +540,6 @@ map.on('locationerror', onLocationError);
    
 
    </script>
-   <script src="../js/holder.js"></script>
+   <script src="../Main/js/holder.js"></script>
   </body>
 </html>
