--- a/Main/index.html
+++ b/Main/index.html
@@ -510,6 +510,6 @@
         })
       }(window.jQuery)
     </script>
-   <script src="../js/holder.js"></script>
+   <script src="../Main/js/holder.js"></script>
   </body>
 </html>
