--- a/Main/map.html
+++ b/Main/map.html
@@ -506,7 +506,7 @@ var zoom = new L.control.zoom();
 
 			var div = L.DomUtil.create('div', 'help');
 			
-			div.innerHTML = '<a id="help" class="popover-inner myclass" data-original-title="Instructions" data-trigger="click" data-content="Zoom into individaul graves, or search by last name." data-placement="top" rel="popover" class="btn" href="#">help</a>';
+			div.innerHTML = '<div class="popover-inner myclass"><a id="help" data-original-title="Instructions" data-trigger="click" data-content="Zoom into individaul graves, or search by last name." data-placement="top" rel="popover" class="btn" href="#">help</a></div>';
 			$(function (){ 
 			    $("#help").popover();
                  });
