--- a/Main/map.html
+++ b/Main/map.html
@@ -278,8 +278,8 @@
     }
     
     .popover-inner myclass {
-    	max-width: 800px;
-	width: auto;
+    	width: 2000px;
+
     }
     
     </style>
