--- a/Main/map.html
+++ b/Main/map.html
@@ -503,7 +503,7 @@ var zoom = new L.control.zoom();
 
 			var div = L.DomUtil.create('div', 'help');
 			
-			div.innerHTML = '<a id="help" data-original-title="Instructions" data-trigger="click" data-content="Zoom into individaul graves, or search by last name." data-placement="top" rel="popover" class="btn" href="#">help</a>';
+			div.innerHTML = '<a id="help" data-original-title="Instructions" data-trigger="click" data-content="Zoom into individaul graves,'\n' or search by last name." data-placement="top" rel="popover" class="btn" href="#">help</a>';
 			$(function (){ 
 			    $("#help").popover({
   					container: 'map' 
