--- a/Main/map.html
+++ b/Main/map.html
@@ -506,7 +506,7 @@ var zoom = new L.control.zoom();
 			div.innerHTML = '<a id="help" data-original-title="Instructions" data-trigger="click"  data-placement="top" rel="popover" class="btn" href="#">help</a>';
 			$(function (){ 
 			    $("#help").popover({
-			    		content: "Zoom into individaul graves, '</br>' or search by last name.",
+			    		content: "Zoom into individaul graves, or search by last name.",
   					container: 'map' 
 				});
                  });
