--- a/Main/map.html
+++ b/Main/map.html
@@ -503,12 +503,9 @@ var zoom = new L.control.zoom();
 
 			var div = L.DomUtil.create('div', 'help');
 			
-			div.innerHTML = '<a id="help" data-original-title="Instructions" data-trigger="click"  data-placement="top" rel="popover" class="btn" href="#">help</a>';
+			div.innerHTML = '<a id="help" data-original-title="Instructions" data-trigger="click" data-content="Zoom into individaul graves, or search by last name."  data-placement="top" rel="popover" class="btn" href="#">help</a>';
 			$(function (){ 
-			    $("#help").popover({
-			    		content: "Zoom into individaul graves, or search by last name.",
-  					container: 'map' 
-				});
+			    $("#help").popover();
                  });
 			
 			return div;
