Change search bar

--- a/Main/map.html
+++ b/Main/map.html
@@ -335,7 +335,7 @@
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Download Walking Map PDF</a></li>
                   </ul>
                 </li>
-                <li class="pos-search">Search:&nbsp;<input type="text" data-provide="typehead" id="search" /></li>
+                <li class="pos-search"><input type="text" placeholder="Search..." id="search" /></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
