Changed text in Carousel

--- a/Main/index.html
+++ b/Main/index.html
@@ -328,9 +328,10 @@
           <img src="https://sphotos-b.xx.fbcdn.net/hphotos-prn1/277619_468787819808983_1345812930_o.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Explore Riverside Cemetery</h1>
-              <p class="lead">Search our Interment database</p>
-              <a class="btn btn-large btn-primary" href="../Main/map.html">Search the Map!</a>
+              <h1>HISTORIC RIVERSIDE CEMETERY</h1>
+              <p class="lead">ESTABLISHED 1885</p>
+              <p>CITY OF ASHEVILLE</P>
+			  <p>PARKS, RECREATION AND CULTURAL ARTS</p>
             </div>
           </div>
         </div>
