--- a/Main/index.html
+++ b/Main/index.html
@@ -325,12 +325,12 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="https://sphotos-b.xx.fbcdn.net/hphotos-prn1/277619_468787819808983_1345812930_o.jpg" alt="">
+          <img src="http://farm3.staticflickr.com/2849/8773736230_c23e9b9493.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>HISTORIC RIVERSIDE CEMETERY</h1>
               <p class="lead">ESTABLISHED 1885</p>
-              <p>CITY OF ASHEVILLE</P>
+              <p class="lead">CITY OF ASHEVILLE</p>
 			  <p>PARKS, RECREATION AND CULTURAL ARTS</p>
             </div>
           </div>
