Changes to carousel

--- a/Main/index.html
+++ b/Main/index.html
@@ -328,15 +328,15 @@
           <img src="http://farm3.staticflickr.com/2849/8773736230_c23e9b9493.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>HISTORIC RIVERSIDE CEMETERY</h1>
-              <p class="lead">ESTABLISHED 1885</p>
-              <p class="lead">CITY OF ASHEVILLE</p>
-			  <p>PARKS, RECREATION AND CULTURAL ARTS</p>
+              <h1 class="text-center">HISTORIC RIVERSIDE CEMETERY</h1>
+              <p class="text-center" class="lead">ESTABLISHED 1885</p>
+              <p class="text-center" class="lead">CITY OF ASHEVILLE</p>
+			  <p class="text-center">PARKS, RECREATION AND CULTURAL ARTS</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn1/526370_562123817142049_497421078_n.jpg" alt="">
+          <img src="http://farm9.staticflickr.com/8267/8768923027_bfc9b0ece4.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Take the Historic Tour</h1>
@@ -346,7 +346,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-ash3/246516_467162456638186_1332342264_n.jpg" alt="">
+          <img src="http://farm9.staticflickr.com/8278/8768923073_0b5f757612.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Want to be buried at Riverside Cemetery</h1>
