Changes to Carousel

--- a/Main/index.html
+++ b/Main/index.html
@@ -328,10 +328,10 @@
           <img src="http://farm3.staticflickr.com/2849/8773736230_c23e9b9493.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1 class="text-center">HISTORIC RIVERSIDE CEMETERY</h1>
-              <p class="text-center" class="lead">ESTABLISHED 1885</p>
-              <p class="text-center" class="lead">CITY OF ASHEVILLE</p>
-			  <p class="text-center">PARKS, RECREATION AND CULTURAL ARTS</p>
+              <h1>HISTORIC RIVERSIDE CEMETERY</h1>
+              <p class="lead">ESTABLISHED 1885</p>
+              <p class= class="lead">CITY OF ASHEVILLE</p>
+			  <p>PARKS, RECREATION AND CULTURAL ARTS</p>
             </div>
           </div>
         </div>
@@ -340,7 +340,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Take the Historic Tour</h1>
-              <p class="lead">Take a tour of historic figures buried at Riverside Cemetery.</p>
+              <p class="lead">Take an online version of the Riverside Cemetery Walking Tour.</p>
               <a class="btn btn-large btn-primary" href="http://gis.ashevillenc.gov/mapasheville/historictour/">Learn more</a>
             </div>
           </div>
@@ -349,8 +349,8 @@
           <img src="http://farm9.staticflickr.com/8278/8768923073_0b5f757612.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Want to be buried at Riverside Cemetery</h1>
-              <p class="lead">Contact the cemetery manager for all burial information.</p>
+              <h1>Find a grave</h1>
+              <p class="lead">Explore Riverside Cemetery</p>
               <a class="btn btn-large btn-primary" href="#fees">View More Details</a>
             </div>
           </div>
