Added new photos

--- a/Main/index.html
+++ b/Main/index.html
@@ -351,7 +351,7 @@
             <div class="carousel-caption">
               <h1>Find a grave</h1>
               <p class="lead">Explore Riverside Cemetery</p>
-              <a class="btn btn-large btn-primary" href="#fees">View More Details</a>
+              <a class="btn btn-large btn-primary" href="../Main/map.html">View More Details</a>
             </div>
           </div>
         </div>
@@ -374,16 +374,16 @@
          <a href="../Main/map.html"><img class="img-circle" src="http://farm8.staticflickr.com/7402/8759284922_9426528d22_b.jpg"></a>
           <h2>Search the Map</h2>
           <p>Curioius about who is buried at Riverside Cemetery, or are looking for a loved one, find them on our <em>new</em> interactive map!</p>
-          <p><a class="btn" href="cityofasheville.github.io/riversidecemetery/Main/map.html">View the Map &raquo;</a></p>
+          <p><a class="btn" href="../Main/map.html">View the Map &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-          <a href="http://gis.ashevillenc.gov/mapasheville/historictour/"><img class="img-circle" src="http://farm8.static.flickr.com/7269/7563525608_b3928c48b2_b.jpg"></a>   
+          <a href="http://gis.ashevillenc.gov/mapasheville/historictour/"><img class="img-circle" src="http://farm4.staticflickr.com/3668/8768925997_8cb7d6810a.jpg"></a>   
           <h2>Historic Tour</h2>
           <p>Come explore the history of Riverside Cemetery on the historic tour.</p>
           <p><a class="btn" href="http://gis.ashevillenc.gov/mapasheville/historictour/">Take the Tour &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-          <a href="#fees"><img class="img-circle" src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-snc6/408385_468104799877285_1949215556_n.jpg"></a>
+          <a href="#fees"><img class="img-circle" src="http://farm6.staticflickr.com/5338/8768926353_e82dc6f767.jpg"></a>
           <h2>Fees</h2>
           <p>Burail costs at Riverside Cemetery.</p>
           <p><a class="btn" href="#fees">View details &raquo;</a></p>
