Created History section remove fees

--- a/Main/index.html
+++ b/Main/index.html
@@ -404,36 +404,9 @@
       <hr class="featurette-divider">
 
       <div class="featurette" id="fees">
-        <img class="featurette-image pull-left" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-prn1/534823_560608557293575_91925643_n.jpg">
-        <h2 class="featurette-heading">Riverside Cemetery.<span class="muted">fees.</span></h2>
-        <p class="lead"><strong>Interment Fees:</strong>
-            </br>
-                   <em>Adults</em>
-                        </br>Mon - Fri before 4:30pm        $1200.00</br>
-                    <em>Weekends, Holidays</em>
-                    </br>or after 4:30pm               $1300.00</br>
-                </br>
-                    <em>Infant/Children</em>        $350.00</br>
-                </br>
-                    <em>Cremations</em>
-                        </br>Mon - Fri before 4:30pm        $375.00</br>
-                    <em>Weekends, Holidays</em>
-                        </br>Or after 4:30pm                $475.00</br>
-                </br>
-                    <strong>Grave Prices:</strong>
-                    </br>
-                        Adults Spaces (40sqft)             $1300.00</br>
-                        + 25% for non-city residents       $1625.00</br>
-                        Infant/Child Space                 $100.00</br>
-                </br>
-                    <strong>Other Fees:</strong>
-                </br>
-                        Tent/Chairs Set-up                     $200.00</br>
-                        Transfer Fee                           $100.00</br>
-                        Monumnet Permit                        $75.00</br>
-                        Disinterment                           $100.00</br>
-                        DSS/Indigent                           $100.00
-                     
+        <img class="featurette-image pull-left" src="http://farm8.staticflickr.com/7370/8768926627_880a391222.jpg">
+        <h2 class="featurette-heading">Riverside Cemetery.<span class="muted">history.</span></h2>
+        <p class="lead">Riverside Cemetery was founded on August 4th, 1885 by the Asheville Cemetery Company.  It was planned as a garden style cemetery which would serve well as both a burial ground and public park. After almost 70 years of ownership, the Asheville Cemetery Company sold Riverside to the City of Asheville in 1952. The City made many improvements to the cemetery, including opening new sections for interments and paving over 3.5 miles of roads inside the cemetery gates.  Riverside was named a Buncombe County Treasure Tree Preserve in 1997. Today, we are operated by the City of Asheville Parks, Recreation and Cultural Arts Department.
         </p>
       </div>
 
