--- a/Main/index.html
+++ b/Main/index.html
@@ -416,19 +416,19 @@
         <img class="featurette-image pull-right" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-snc7/402000_552903278064103_335592587_n.jpg">
         <h2 class="featurette-heading">Contact.<span class="muted">info.</span></h2>
         <p class="lead"><strong>Contact Information</strong>
+		<address>
         </br>Riverside Cemetery
         </br>53 Birch Street, Asheville, NC 28801
         </br>Cemetery Hours: 8 a.m.-4:30 p.m., M-F
+		</br>Phone: (828) 350-2066
+		</br><a href="mailto:jdarty@ashevillenc.gov"> E-mail: jdarty@ashevillenc.gov</a>
         </br>Gates are open everyday from:
         </br>
             <ul>
                 <li>7am-8pm April 1 - October 31</li>
                 <li>7am-6pm November 1 - March 31</li>
            </ul>
-           </br>Phone: (828) 350-2066
-           </br>E-mail: jdarty@ashevillenc.gov
-           </br>Office Hours: by appointment only,
-           </br>call (828) 350-2066 to schedule an appointment
+		   </address>
         </p>
       </div>
       
