Added in pdf links and changes email address

--- a/Main/index.html
+++ b/Main/index.html
@@ -415,13 +415,12 @@
       <div class="featurette" id="contact">
         <img class="featurette-image pull-right" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-snc7/402000_552903278064103_335592587_n.jpg">
         <h2 class="featurette-heading">Contact.<span class="muted">info.</span></h2>
-        <p class="lead"><strong>Contact Information</strong>
 		<address>
         </br>Riverside Cemetery
         </br>53 Birch Street, Asheville, NC 28801
         </br>Cemetery Hours: 8 a.m.-4:30 p.m., M-F
 		</br>Phone: (828) 350-2066
-		</br><a href="mailto:jdarty@ashevillenc.gov"> E-mail: jdarty@ashevillenc.gov</a>
+		</br>E-mail: <a href="mailto:jdarty@ashevillenc.gov">jdarty@ashevillenc.gov</a>
         </br>Gates are open everyday from:
         </br>
             <ul>
@@ -429,6 +428,11 @@
                 <li>7am-6pm November 1 - March 31</li>
            </ul>
 		   </address>
+		   <ul class="inline">
+				<li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Riverside Cemetery Walking Tour PDF</a></li>
+				<li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Riverside Cemetery Walking Map PDF</a></li>
+				<li><a href="../img/RiversideFees.pdf">Riverside Prices & Fees PDF</a></li>
+		   </ul>
         </p>
       </div>
       
