--- a/Main/index.html
+++ b/Main/index.html
@@ -292,7 +292,7 @@
               <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#fees">Fees</a></li>
+                <li><a href="#history">History</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#feedback">Feedback</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
@@ -381,10 +381,10 @@
           <p><a class="btn" href="http://gis.ashevillenc.gov/mapasheville/historictour/">Take the Tour &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
-          <a href="#fees"><img class="img-circle" src="http://farm6.staticflickr.com/5338/8768926353_e82dc6f767.jpg"></a>
-          <h2>Fees</h2>
-          <p>Burail costs at Riverside Cemetery.</p>
-          <p><a class="btn" href="#fees">View details &raquo;</a></p>
+          <a href="#history"><img class="img-circle" src="http://farm6.staticflickr.com/5338/8768926353_e82dc6f767.jpg"></a>
+          <h2>Records</h2>
+          <p>Search the Interment Files</p>
+          <p><a class="btn" href="#history">View details &raquo;</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
@@ -398,12 +398,12 @@
         <h2 class="featurette-heading">Riverside.<span class="muted">cemetery.</span></h2>
         <p class="lead">Riverside Cemetery is not just a place where families come to visit a friend or a loved one. It is a place of beauty - a place where you can walk, take photographs, paint and visit the grave sites of prominent writers Thomas Wolfe and O. Henry.  Walking Tours are available at the cemetery office and can offer a unique journey into Asheville’s past. More than 4,000 visitors tour the cemetery each year. <br /><br />
 						City of Asheville’s Riverside Cemetery is located in the Montford <br /> Historic District, a short walk or drive from downtown. The cemetery<br /> features more than 87 acres of landscaped grounds. The cemetery averages approximately 50 services each year.<br /><br />
-						Services offered include grave sales, historical and genealogical research, cemetery tours, landscape maintenance, and assistance with monument purchases.<span class="text-info">Call (828) 350-2066 </span>to schedule an appointment.</p>
+						Services offered include grave sales, historical and genealogical research, cemetery tours, landscape maintenance, and assistance with monument purchases. Call <span class="text-info">(828) 350-2066 </span>to schedule an appointment.</p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette" id="fees">
+      <div class="featurette" id="history">
         <img class="featurette-image pull-left" src="http://farm8.staticflickr.com/7370/8768926627_880a391222.jpg">
         <h2 class="featurette-heading">Riverside Cemetery.<span class="muted">history.</span></h2>
         <p class="lead">Riverside Cemetery was founded on August 4th, 1885 by the Asheville Cemetery Company.  It was planned as a garden style cemetery which would serve well as both a burial ground and public park. After almost 70 years of ownership, the Asheville Cemetery Company sold Riverside to the City of Asheville in 1952. The City made many improvements to the cemetery, including opening new sections for interments and paving over 3.5 miles of roads inside the cemetery gates.  Riverside was named a Buncombe County Treasure Tree Preserve in 1997. Today, we are operated by the City of Asheville Parks, Recreation and Cultural Arts Department.
@@ -431,7 +431,7 @@
 		   <ul class="inline">
 				<li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Riverside Cemetery Walking Tour PDF</a></li>
 				<li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Riverside Cemetery Walking Map PDF</a></li>
-				<li><a href="../img/RiversideFees.pdf">Riverside Prices & Fees PDF</a></li>
+				<li><a href="../Main/img/RiversideFees.pdf">Riverside Prices & Fees PDF</a></li>
 		   </ul>
         </p>
       </div>
