--- a/Main/index.html
+++ b/Main/index.html
@@ -308,6 +308,7 @@
                     <li class="nav-header">Downloads</li>
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Download Walking Tour PDF</a></li>
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Download Walking Map PDF</a></li>
+					<li><a href="../Main/img/RiversideFees.pdf">Download Riverside Prices & Fees PDF</a></li>
                   </ul>
                 </li>
               </ul>
@@ -383,7 +384,6 @@
         <div class="span4">
           <a href="#history"><img class="img-circle" src="http://farm6.staticflickr.com/5338/8768926353_e82dc6f767.jpg"></a>
           <h2>Records</h2>
-          <p>Search the Interment Files</p>
           <p><a class="btn" href="#history">View details &raquo;</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
