--- a/Main/index.html
+++ b/Main/index.html
@@ -522,14 +522,23 @@
         })
       }(window.jQuery)
 	  
-	  $('.typeahead').typeahead({
-		source: gravedata,
-		minLength: 2	
-		}
-		
-		
+	  var data = [];
+	  for(each in gravedata){
+			var last = gravedata[each].feature.properties.last_name;
+			var first = gravedata[each].feature.properties.first_name;
+			var middle = gravedata[each].feature.properties.middle_name;
+			var section = gravedata[each].feature.properties.section;
+			var lot = gravedata[each].feature.properties.lot;
+			var gravenum = gravedata[each].feature.properties.grave_num;
+			var interment = gravedata[each].feature.properties.interment_num;
+			var age = gravedata[each].feature.properties.age;
+			
+			data.push({last: last, first: first, middle: middle, section: section, lot: lot, gravenum: gravenum, interment: interment, age: age});
 	  
-	  });
+	  $('.typeahead').typeahead({
+		source: data,
+		minLength: 2	
+	});
 	  
     </script>
    <script src="../Main/js/holder.js"></script>
