--- a/Main/index.html
+++ b/Main/index.html
@@ -416,7 +416,7 @@
         <img class="featurette-image pull-left" src="http://farm8.staticflickr.com/7370/8768926627_880a391222.jpg">
         <h2 class="featurette-heading">Records.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Search the Interment Files</p>
-		<input type="text" data-provide="typeahead">
+		<input type="text" id="search">
 		<table class="table table-striped">
 			<thead>
 				<tr>
@@ -535,9 +535,12 @@
 			
 			data.push({last: last, first: first, middle: middle, section: section, lot: lot, gravenum: gravenum, interment: interment, age: age});
 	  
-	  $('.typeahead').typeahead({
+	  $('#search').typeahead({
 		source: data,
-		minLength: 2	
+		minLength: 2,
+		updater: function(item){
+        return ('#Int').append(<p>item.interment</p>);
+		
 	});
 	  }
     </script>
