new test to .append to table

--- a/Main/index.html
+++ b/Main/index.html
@@ -539,7 +539,7 @@
 		source: data,
 		minLength: 2,
 		updater: function(item){
-        return ('#Int').append('<p>item.interment</p>');
+			return $('#Int').append('<p>item.interment</p>');
 		
 	});
 	  }
