Made array of arrays

--- a/Main/index.html
+++ b/Main/index.html
@@ -534,16 +534,8 @@
 			var age = gravedata.features[each].properties.age;
 			var fullname = last + ", " + first + " " + middle;
 			
-			data.push({label: fullname, value: fullname, last: last, first: first, middle: middle, section: section, lot: lot, gravenum: gravenum, interment: interment, age: age});
-	$(function (){
-	  $('#search').typeahead({
-		source: data,
-		minLength: 2,
-		updater: function(item){
-			$('#Int').append('<p>item.interment</p>');
-		}
-	  });
-	});
+			data.push([fullname, last, first, middle, section, lot, gravenum, interment, age]);
+	
 	  }
     </script>
    <script src="../Main/js/holder.js"></script>
