--- a/Main/index.html
+++ b/Main/index.html
@@ -416,7 +416,7 @@
         <img class="featurette-image pull-left" src="http://farm8.staticflickr.com/7370/8768926627_880a391222.jpg">
         <h2 class="featurette-heading">Records.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Search the Interment Files</p>
-		<input type="text" id="search"  data-provide="typeahead">
+		
   
 		<table class="table table-striped" id='datatable'>
 			<thead>
@@ -536,14 +536,26 @@
 			var gravenum = gravedata.features[each].properties.grave_num;
 			var interment = gravedata.features[each].properties.interment_num;
 			var age = gravedata.features[each].properties.age;
+      var url = gravedata.features[each].properties.url_photo
 			var fullname = last + ", " + first + " " + middle;
 			
-			data.push([fullname, last, first, middle, section, lot, gravenum, interment, age]);
+			data.push(['<img src=' + '"' + url + '"' + '/>', fullname, last, first, middle, section, lot, gravenum, interment, age]);
 
       $(document).ready(function() {
           $('#datatable').dataTable( {
               "sPaginationType": "bootstrap",
-              "aaData": data
+              "aaData": data,
+              "aoColumns": [
+            { "sTitle": "Image"},
+            { "sTitle": "Full Name" },
+            { "sTitle": "Last Name" },
+            { "sTitle": "First Name" },
+            { "sTitle": "Section", "sClass": "center" },
+            { "sTitle": "Lot", "sClass": "center" },
+            { "sTitle": "Grave #", "sClass": "center"},
+            { "sTitle": "Interment #", "sClass": "center"},
+            { "sTitle": "Age", "sClass": "center"}
+        ]
           } );
       } );
 	
