Removed old empty table

--- a/Main/index.html
+++ b/Main/index.html
@@ -418,34 +418,7 @@
         <p class="lead">Search the Interment Files</p>
 		
   
-		<table class="table table-striped" id='datatable'>
-			<thead>
-				<tr>
-					<th>Interment #</th>
-					<th>Last Name</th>
-					<th>First Name</th>
-					<th>Middle Name</th>
-					<th>Title</th>
-					<th>Age</th>
-					<th>Section</th>
-					<th>Lot</th>
-					<th>Grave</th>	
-				<tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td id="Int"></td>
-					<td id="LN"></td>
-					<td id="FN"></td>
-					<td id="MN"></td>
-					<td id="T"></td>
-					<td id="A"></td>
-					<td id="Sec"></td>
-					<td id="Lot"></td>
-					<td id="Grave"></td>
-				</tr>	
-			</tbody>
-		</table>
+		<table class="table table-striped" id='datatable'></table>
   
       </div>
 
