Made changes to datatable

--- a/Main/index.html
+++ b/Main/index.html
@@ -418,7 +418,32 @@
         <p class="lead">Search the Interment Files</p>
 		
   
-		<table class="table table-striped" id='datatable'></table>
+		<table class="table table-striped" id='datatable'>
+			<thead>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+				<th></th>
+			</thead>
+			<tbody>
+				<tr>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
   
       </div>
 
