Made changes to table add option bRetrieve

--- a/Main/index.html
+++ b/Main/index.html
@@ -543,6 +543,7 @@
           $('#datatable').dataTable( {
               "sPaginationType": "bootstrap",
               "aaData": data,
+			  "bRetrieve": true,
               "aoColumns": [
             { "sTitle": "Image"},
             { "sTitle": "Full Name" },
