--- a/Main/index.html
+++ b/Main/index.html
@@ -417,8 +417,8 @@
         <h2 class="featurette-heading">Records.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Search the Interment Files</p>
 		
-  
-		<table class="table table-striped" id='datatable'>
+  <div id="datatable"></div>
+		<!-- <table class="table table-striped" id='datatable'>
 			<thead>
 				<th></th>
 				<th></th>
@@ -443,7 +443,7 @@
 					<td></td>
 				</tr>
 			</tbody>
-		</table>
+		</table> -->
   
       </div>
 
