--- a/Main/index.html
+++ b/Main/index.html
@@ -417,7 +417,7 @@
         <h2 class="featurette-heading">Records.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Search the Interment Files</p>
 		
-  <div id="datatable"></div>
+  <table id="datatable"></table>
 		<!-- <table class="table table-striped" id='datatable'>
 			<thead>
 				<th></th>
