--- a/Main/index.html
+++ b/Main/index.html
@@ -413,7 +413,7 @@
 	  <hr class="featurette-divider">
 
       <div class="featurette" id="records">
-        <img class="featurette-image pull-left" src="http://farm8.staticflickr.com/7370/8768926627_880a391222.jpg">
+        <img class="featurette-image pull-right" src="http://farm8.staticflickr.com/7357/8768925555_6581451547.jpg">
         <h2 class="featurette-heading">Records.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Search the Interment Files</p>
 		
