changed to striped style

--- a/Main/index.html
+++ b/Main/index.html
@@ -417,7 +417,7 @@
         <h2 class="featurette-heading">Records.<span class="muted">riverside cemetery.</span></h2>
         <p class="lead">Search the Interment Files</p>
 		
-  <table id="datatable" class="table table-bordered"></table>
+  <table id="datatable" class="table table-striped"></table>
 		<!-- <table class="table table-striped" id='datatable'>
 			<thead>
 				<th></th>
