--- a/Main/index.html
+++ b/Main/index.html
@@ -543,6 +543,7 @@
           $('#datatable').dataTable( {
               "sPaginationType": "bootstrap",
               "aaData": data,
+			  "bProcessing":true,
 			  "bRetrieve": true,
               "aoColumns": [
             { "sTitle": "Image"},
