--- a/Main/index.html
+++ b/Main/index.html
@@ -546,7 +546,7 @@
 			  "bDeferRender": true,
 			  "bProcessing":true,
 			  "bRetrieve": true,
-			  "iDisplayStart": 0,
+			  "iDisplayLength": 0,
               "aoColumns": [
             { "sTitle": "Image"},
             { "sTitle": "Full Name" },
