--- a/Main/index.html
+++ b/Main/index.html
@@ -534,7 +534,7 @@
 			var gravenum = gravedata.features[each].properties.grave_num;
 			var interment = gravedata.features[each].properties.interment_num;
 			var age = gravedata.features[each].properties.age;
-      var url = gravedata.features[each].properties.url_photo
+			var url = gravedata.features[each].properties.url_photo;
 			var fullname = last + ", " + first + " " + middle;
 			
 			data.push(['<img src=' + '"' + url + '"' + '/>', fullname, last, first, middle, section, lot, gravenum, interment, age]);
@@ -543,10 +543,11 @@
           $('#datatable').dataTable( {
               "sPaginationType": "bootstrap",
               "aaData": data,
-			  "bDeferRender": true,
 			  "bProcessing":true,
+			  "sAjaxSource": "data",
+			  "bDeferRender": true,
 			  "bRetrieve": true,
-			  "iDisplayLength": 0,
+			  "iDisplayLength": 5,
               "aoColumns": [
             { "sTitle": "Image"},
             { "sTitle": "Full Name" },
