Changed Nav Bar

--- a/Main/index.html
+++ b/Main/index.html
@@ -294,6 +294,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#history">History</a></li>
                 <li><a href="#contact">Contact</a></li>
+				<li><a href="#records">Records</a></li>
+				<li><a href="http://goo.gl/maps/HFzae">Directions</a></li>
                 <li><a href="#feedback">Feedback</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
@@ -301,9 +303,8 @@
                   <ul class="dropdown-menu">
                     <li><a href="http://www.ashevillenc.gov/">City of Asheville</a></li>
                     <li><a href="http://opendatacatalog.ashevillenc.gov/">Open Data Asheville</a></li>
-                    <li><a href="https://www.facebook.com/pages/Riverside-Cemetery/116156805072088">Join Us on Facebook</a></li>
+                    <li><a href="https://www.facebook.com/pages/Riverside-Cemetery/116156805072088">Join Us on Facebook!</a></li>
                     <li><a href="http://www.flickr.com/photos/66019045@N04/sets/72157630529238250/">Photos on Flickr</a></li>
-                    <li><a href="http://maps.google.com/maps/ms?hl=en&ie=UTF8&msa=0&msid=108370934995525527319.00044c197e3343f7bd83b&ll=35.600648,-82.543459&spn=0.053667,0.111237&z=14&iwloc=00044c93a8d250cb57632">Directions</a></li>
                     <li class="divider"></li>
                     <li class="nav-header">Downloads</li>
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Download Walking Tour PDF</a></li>
@@ -418,40 +419,14 @@
         <p class="lead">Search the Interment Files</p>
 		
   <table id="datatable" class="table table-striped"></table>
-		<!-- <table class="table table-striped" id='datatable'>
-			<thead>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-				<th></th>
-			</thead>
-			<tbody>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-			</tbody>
-		</table> -->
-  
+		
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette" id="contact">
-        <img class="featurette-image pull-right" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-snc7/402000_552903278064103_335592587_n.jpg">
-        <h2 class="featurette-heading">Contact.<span class="muted">info.</span></h2>
+        <img class="featurette-image pull-right" src="http://farm9.staticflickr.com/8554/8773735790_b58aeb70ce.jpg"">
+        <h2 class="featurette-heading">Contact.<span class="muted">riverside cemetery.</span></h2>
 		<address>
         </br>Riverside Cemetery
         </br>53 Birch Street, Asheville, NC 28801
@@ -516,7 +491,7 @@
     <script src="../Main/js/bootstrap-typeahead.js"></script>
     <script src="../Main/js/jquery.dataTables.js"></script>
     <script src="../Main/js/datatable.bootstrap.js"></script>
-	  <script src="../Main/data/gravedata.js"></script>
+	<script src="../Main/data/gravedata.js"></script>
     <script>
       !function ($) {
         $(function(){
