--- a/Main/map.html
+++ b/Main/map.html
@@ -14,16 +14,10 @@
     <link type="text/css" rel="stylesheet" href="../Main/css/stylesheet.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" /> 
-
-    
-    <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
     <link rel="stylesheet" href="../Main/js/Leaflet.markercluster-master/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="../Main/js/Leaflet.markercluster-master/dist/MarkerCluster.Default.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="../dist/MarkerCluster.Default.ie.css" /><![endif]-->
     <!--<script src="../new/leafletajax/dist/leaflet.ajax.js"></script>-->
-    <script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
-    <script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
-    <script src="../Main/data/gravedata.js"></script>
 
     <style>
 
@@ -311,28 +305,30 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#">Riverside Cemetery</a>
+            <a class="brand" href="../Main/index.html#">Riverside Cemetery</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#">Home</a></li>
-                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.htmll#about">About</a></li>
-                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#fees">Fees</a></li>
-                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#contact">Contact</a></li>
-                <li><a href="http://cityofasheville.github.io/riversidecemetery/Main/index.html#feedback">Feedback</a></li>
+                <li class="active"><a href="../Main/index.html#">Home</a></li>
+                <li><a href="../Main/index.htmll#about">About</a></li>
+                <li><a href="../Main/index.html#fees">Fees</a></li>
+                <li><a href="../Main/index.html#contact">Contact</a></li>
+				<li><a href="../Main/index.html#records">Records</a></li>
+				<li><a href="http://goo.gl/maps/HFzae">Directions</a></li>
+                <li><a href="../Main/index.html#feedback">Feedback</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Info <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="http://www.ashevillenc.gov/">City of Asheville</a></li>
                     <li><a href="http://opendatacatalog.ashevillenc.gov/">Open Data Asheville</a></li>
-                    <li><a href="https://www.facebook.com/pages/Riverside-Cemetery/116156805072088">Join Us on Facebook</a></li>
+                    <li><a href="https://www.facebook.com/pages/Riverside-Cemetery/116156805072088">Join Us on Facebook!</a></li>
                     <li><a href="http://www.flickr.com/photos/66019045@N04/sets/72157630529238250/">Photos on Flickr</a></li>
-                    <li><a href="http://maps.google.com/maps/ms?hl=en&ie=UTF8&msa=0&msid=108370934995525527319.00044c197e3343f7bd83b&ll=35.600648,-82.543459&spn=0.053667,0.111237&z=14&iwloc=00044c93a8d250cb57632">Directions</a></li>
                     <li class="divider"></li>
                     <li class="nav-header">Downloads</li>
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/riversidewalkingtour2012[1].pdf">Download Walking Tour PDF</a></li>
                     <li><a href="http://www.ashevillenc.gov/Portals/0/city-documents/parks/parks_docs/riverside/walkingtourmap2012c[1].pdf">Download Walking Map PDF</a></li>
+					<li><a href="../Main/img/RiversideFees.pdf">Download Riverside Prices & Fees PDF</a></li>
                   </ul>
                 </li>
                 <li class="pos-search"><input type="text" placeholder="Search..." id="search" /></li>
@@ -358,6 +354,10 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+	<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
+	<script src="../Main/js/Leaflet.markercluster-master/dist/leaflet.markercluster-src.js"></script>
+    <script src="../Main/js/azgs-leaflet-master/js/azgs-leaflet/TileLayer.ESRI.js"></script>
+    <script src="../Main/data/gravedata.js"></script>
     <script src="../Main/js/jquery.js"></script>
     <script src="../Main/js/bootstrap-transition.js"></script>
     <script src="../Main/js/bootstrap-alert.js"></script>
