--- a/Main/index.html
+++ b/Main/index.html
@@ -327,7 +327,7 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="http://farm8.staticflickr.com/7396/8806265042_a265767432_o.jpg" alt="">
+          <img src="http://farm8.staticflickr.com/7396/8806265042_e37a10134f_b.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>HISTORIC RIVERSIDE CEMETERY</h1>
@@ -527,6 +527,7 @@
             { "sTitle": "Full Name" },
             { "sTitle": "Last Name" },
             { "sTitle": "First Name" },
+			{ "sTitle": "Middle Name" },
             { "sTitle": "Section", "sClass": "center" },
             { "sTitle": "Lot", "sClass": "center" },
             { "sTitle": "Grave #", "sClass": "center"},
